# ProjectEndeavor

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt  rules.txt
app/: hello-triangle-application.cpp  main.cpp
app/CosmosVk/: main.cpp
app/HelloTriangleApp/: main.cpp
scripts/: generate-clang-tidy.sh  install-conan-deps.sh
src/core/render/: CMakeLists.txt
src/core/shaders/: shader.frag  shader.vert
